--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axois": "0.0.1-security",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.54",
     "gatsby-image": "^2.4.17",
