--- a/data/projects.json
+++ b/data/projects.json
@@ -4,7 +4,7 @@
     "slug": "project-1",
     "url": "https://example.com/",
     "image": "./images/project1.jpg",
-    "description": "I build this to show off my sweet skills",
+    "description": "Elit numquam nisi ad maiores tempore. Nulla dolor perferendis fuga accusamus quam. Labore architecto ipsum numquam alias consectetur Id architecto?",
     "technologies": [
       "html",
       "css",
@@ -20,7 +20,7 @@
     "slug": "project-2",
     "url": "https://example.org/",
     "image": "./images/project2.jpg",
-    "description": "This one is also good",
+    "description": "Ipsum minima sed dicta laboriosam necessitatibus Fugit dolorem vero beatae.",
     "technologies": [
       "html",
       "css",
