--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
-    "react-particles-js": "^3.3.0",
+    "react-tsparticles": "^1.17.12",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
