--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axois": "0.0.1-security",
     "babel-plugin-styled-components": "^1.11.1",
+    "framer-motion": "^2.7.7",
     "gatsby": "^2.24.54",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-manifest": "^2.4.28",
