--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^2.7.7",
     "gatsby": "^2.24.54",
     "gatsby-image": "^2.4.17",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
