--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "scottdiemer-portfolio",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Scott Diemer <scottdiemer@gmail.com>",
   "dependencies": {
     "axois": "0.0.1-security",
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^2.7.7",
-    "gatsby": "^2.24.54",
-    "gatsby-image": "^2.4.17",
-    "gatsby-plugin-anchor-links": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.4.28",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby": "^4.4.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.32",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.28",
-    "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-json": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-animated-burgers": "^1.2.8",
     "react-axios": "^2.0.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "prettier": "2.5.1"
   },
   "keywords": [
     "gatsby"
