--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^2.7.7",
     "gatsby": "^4.4.0",
-    "gatsby-image": "^3.11.0",
+    "gatsby-codemods": "^3.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
