--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^2.7.7",
     "gatsby": "^4.4.0",
-    "gatsby-codemods": "^3.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -21,9 +20,9 @@
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-json": "^4.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
+    "hamburger-react": "^2.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-animated-burgers": "^1.2.8",
     "react-axios": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
