Dropped unneeded technology pills and added one. Fixed issue with project card technology height when technologies wrap.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,11 +6,9 @@
     "image": "./images/project1.jpg",
     "description": "Portfolio site made in GatsbyJS",
     "technologies": [
-      "html",
-      "css",
-      "javascript",
       "reactjs",
       "gatsbyjs",
+      "graphql",
       "styled-components",
       "css modules"
     ],
@@ -22,14 +20,7 @@
     "url": "https://farmcityfeed.com",
     "image": "./images/project2.jpg",
     "description": "Site built to provide general information about Farm City Feed Stores. Made with NextJS using TailwindCSS",
-    "technologies": [
-      "html",
-      "css",
-      "javascript",
-      "reactjs",
-      "nextjs",
-      "tailwindcss"
-    ],
+    "technologies": ["reactjs", "nextjs", "tailwindcss"],
     "githubUrl": "https://github.com/scottdiemer/farmcity"
   }
 ]
